2007-03-07  OHASHI Akira  <bg66@koka-in.org>

	* riece-mixi.el (riece-mixi-display-message-function): Simplify.

	* mixi.el (mixi-save-cache): Use while-loop instead of `mapc'.
	(mixi-load-cache): Ditto.
	* sb-mixi.el (shimbun-mixi-get-headers): Ditto.
	(shimbun-mixi-comment-article): Ditto.
	* mixi-atom.el (mixi-make-atom-entries): Ditto.
	* riece-mixi.el (riece-mixi-check): Ditto.

2007-03-06  OHASHI Akira  <bg66@koka-in.org>

	* riece-mixi.el	(riece-mixi-reply-to-only-me): New user option.
	(riece-mixi-display-message-function): Use it.

	* riece-mixi.el	(riece-mixi-enabled): Abolish.
	(riece-mixi-display-message-function): Follow the change above.
	(riece-mixi-check): Ditto.
	(riece-mixi-enable): Ditto.
	(riece-mixi-disable): Ditto.

2007-03-06  OHASHI Akira  <bg66@koka-in.org>

	* riece-mixi.el: New file.
	* configure.ac: Add AC_CHECK_RIECE and HAVE_RIECE.
	* acinclude.m4: Add AC_CHECK_RIECE.
	* Makefile.am (MODULES_ALL): Abolish.
	(MODULES_SHIMBUN): New variable.
	(MODULES_RIECE): Ditto.
	(EXTRA_DIST): Follow the change above.
	(MODULES): Ditto.

	* mixi-utils.el (mixi-make-title): Support a suffix of news.

2007-03-01  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-favorite-list-id-regexp): Abolish.
	(mixi-favorite-list-nick-regexp): Ditto.
	(mixi-favorite-list-regexp): New regexp.
	(mixi-get-favorites): Follow the change above.

2007-02-23  OHASHI Akira  <bg66@koka-in.org>

	* mixi-atom.el: New file.
	* Makefile.am (MODULES_MIXI): Add it.

	* mixi-utils.el (mixi-make-content): Support mixi-log object.

	* mixi.el (mixi-url-encode-string): New function.
	(mixi-url-encode-and-quote-percent-string): Use it.
	* mixi-utils.el: (mixi-make-encoded-url): New function.
	(mixi-make-objects): Ditto.

	* mixi-utils.el: (mixi-make-id-1): New function.
	(mixi-make-message-id): Use it.
	(mixi-make-tag-uri): New function.
	* sb-mixi.el (shimbun-get-headers): Use it.

	* configure.ac: Change PACKAGE to mixi-el.

2007-02-22  OHASHI Akira  <bg66@koka-in.org>
